--- a/stylesheets/pfs-custom-styles.css
+++ b/stylesheets/pfs-custom-styles.css
@@ -73,7 +73,7 @@
 
 .pfs-multi-select.selection.dropdown .menu {
     margin: 0px -2px !important;
-    min-width: calc(100% + 4px) !important;
+    min-width: 100% !important;
     width: 100% !important;
 }
 
@@ -89,7 +89,7 @@
 
 @media (min-width: 40.0625em) {
     .pfs-multi-select.multiple.dropdown>.text {
-        margin: 2px 0px 0px 4px !important;
+        /* margin: 4px 0px 0px 4px !important; */
         font-size: 1.1875rem;
     }
 }
@@ -122,13 +122,19 @@
     padding: 5px 8px 4px !important;
     border: 0 !important;
     border-radius: 0 !important;
-    box-shadow: none !important
+    box-shadow: none !important;
+    pointer-events: none !important;
+}
+
+.pfs-multi-select.multiple.dropdown>.label .delete.icon {
+    pointer-events: auto !important;
 }
 
 .pfs-multi-select.dropdown>.dropdown.icon {
     right: 0 !important;
     margin-right: 0 !important;
     padding-right: 2px !important;
+    padding-top: 14px !important;
     color: #0b0c0c !important;
     font-size: 10px !important;
     opacity: 1 !important;
