--- a/assets/stylesheets/pfs-custom-styles.css
+++ b/assets/stylesheets/pfs-custom-styles.css
@@ -20,6 +20,54 @@
     padding: 15px;
 }
 
+/* Search Input */
+.pfs-search-item__wrapper {
+    display: table;
+    width: 100%;
+    background: #fff;
+}
+
+.pfs-search__item {
+    width: 1%;
+    position: relative;
+    display: table-cell;
+    vertical-align: top;    
+}
+
+.pfs-search__submit {
+    background-color: #1d70b8;
+    color: #fff;
+    border: 0;
+    cursor: pointer;
+    border-radius: 0;
+    position: relative;
+    display: block;
+    padding: 0;
+    width: 40px;
+    height: 40px;
+    text-indent: -5000px;
+    overflow: hidden;
+}
+
+
+.pfs-search__submit:focus {
+    z-index: 2;
+    outline: 3px solid #fd0;
+    outline-offset: 0;
+    box-shadow: inset 0 0 0 4px #0b0c0c;
+}
+
+.pfs-search__icon {
+    display: block;
+    pointer-events: none;
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    top: 10px;
+    left: 10px;
+}
+
+
 /* Utilities */
 
 .pfs-section-bg-alt {
