added initial screens for new data submission prototype

--- a/assets/stylesheets/pfs-custom-styles.css
+++ b/assets/stylesheets/pfs-custom-styles.css
@@ -31,7 +31,7 @@
     width: 1%;
     position: relative;
     display: table-cell;
-    vertical-align: top;    
+    vertical-align: top;
 }
 
 .pfs-search__submit {
@@ -49,6 +49,12 @@
     overflow: hidden;
 }
 
+.pfs-search__submit--inverted {
+    background-color: #ffffff;
+    color: #1d70b8;
+    box-shadow: inset 0 0 0 2px #0b0c0c;
+    margin-left:-2px;
+}
 
 .pfs-search__submit:focus {
     z-index: 2;
@@ -67,6 +73,15 @@
     left: 10px;
 }
 
+/* App Masthead */
+.pfs-app-masthead {
+    background-color: #1d70b8;
+    margin-top: -10px;
+}
+
+.pfs-app-masthead__text {
+    color: #ffffff;
+}
 
 /* Utilities */
 
@@ -77,7 +92,6 @@
 .pfs-img-border {
     border: 1px solid #b1b4b6;
 }
-
 
 /* Semantic UI Dropdown - Overrides */
 
@@ -130,28 +144,28 @@
     border: 2px solid #0b0c0c !important;
 }
 
-.pfs-multi-select.multiple.dropdown>.text {
+.pfs-multi-select.multiple.dropdown > .text {
     margin: 4px 0px 0px 4px !important;
     color: #0b0c0c !important;
 }
 
 @media (min-width: 40.0625em) {
-    .pfs-multi-select.multiple.dropdown>.text {
+    .pfs-multi-select.multiple.dropdown > .text {
         /* margin: 4px 0px 0px 4px !important; */
         font-size: 1.1875rem;
     }
 }
 
-.pfs-multi-select .menu>.item {
+.pfs-multi-select .menu > .item {
     border: 0 !important;
 }
 
-.pfs-multi-select .menu>.item:hover {
+.pfs-multi-select .menu > .item:hover {
     background-color: #1d70b8 !important;
     color: #ffffff !important;
 }
 
-.pfs-multi-select.multiple.dropdown>.label {
+.pfs-multi-select.multiple.dropdown > .label {
     display: inline-block !important;
     outline: 2px solid rgba(0, 0, 0, 0) !important;
     outline-offset: -2px !important;
@@ -165,7 +179,7 @@
     -moz-osx-font-smoothing: grayscale !important;
     font-weight: 700 !important;
     font-size: 14px !important;
-    font-size: .875rem !important;
+    font-size: 0.875rem !important;
     line-height: 1 !important;
     padding: 5px 8px 4px !important;
     border: 0 !important;
@@ -174,11 +188,11 @@
     pointer-events: none !important;
 }
 
-.pfs-multi-select.multiple.dropdown>.label .delete.icon {
+.pfs-multi-select.multiple.dropdown > .label .delete.icon {
     pointer-events: auto !important;
 }
 
-.pfs-multi-select.dropdown>.dropdown.icon {
+.pfs-multi-select.dropdown > .dropdown.icon {
     right: 0 !important;
     margin-right: 0 !important;
     padding-right: 2px !important;
@@ -188,23 +202,21 @@
     opacity: 1 !important;
 }
 
-.pfs-multi-select.multiple.dropdown>.label>.delete.icon {
+.pfs-multi-select.multiple.dropdown > .label > .delete.icon {
     opacity: 0.6 !important;
     font-size: 11px !important;
 }
 
-.pfs-multi-select.multiple.dropdown>.label>.delete.icon:hover {
+.pfs-multi-select.multiple.dropdown > .label > .delete.icon:hover {
     opacity: 1 !important;
 }
 
 @font-face {
-    font-family: 'icons';
-    src: url('icons/icons.eot?18482551');
-    src: url('icons/icons.eot?18482551#iefix') format('embedded-opentype'),
-        url('icons/icons.woff2?18482551') format('woff2'),
-        url('icons/icons.woff?18482551') format('woff'),
-        url('icons/icons.ttf?18482551') format('truetype'),
-        url('icons/icons.svg?18482551#fontello') format('svg');
+    font-family: "icons";
+    src: url("icons/icons.eot?18482551");
+    src: url("icons/icons.eot?18482551#iefix") format("embedded-opentype"),
+        url("icons/icons.woff2?18482551") format("woff2"), url("icons/icons.woff?18482551") format("woff"),
+        url("icons/icons.ttf?18482551") format("truetype"), url("icons/icons.svg?18482551#fontello") format("svg");
     font-weight: normal;
     font-style: normal;
 }
@@ -218,22 +230,21 @@ i.icon:before {
     display: inline-block;
     text-decoration: inherit;
     width: 1em;
-    margin-right: .2em;
+    margin-right: 0.2em;
     text-align: center;
     font-variant: normal;
     text-transform: none;
     line-height: 1em;
-    margin-left: .2em;
+    margin-left: 0.2em;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 .icon.delete:before {
-    content: '\e800' !important;
+    content: "\e800" !important;
     margin-right: 0 !important;
 }
 
 .icon.dropdown:before {
-    content: '\e803' !important;
-
+    content: "\e803" !important;
 }
